Restore PyTorch extra-index-url in requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ scikit-learn>=1.3.0
 joblib>=1.3.0
 
 # PyTorch - CPU-only version for deployment
+--extra-index-url https://download.pytorch.org/whl/cpu
 torch>=2.0.0
 
 # Geospatial - Streamlit Cloud compatible versions
@@ -26,3 +27,15 @@ openpyxl>=3.1.0
 # Utilities
 scipy>=1.10.0
 requests>=2.31.0
+
+# Additional dependencies for model training (optional for deployment)
+# Uncomment if training locally:
+# numba>=0.57.0
+# libpysal>=4.9.0
+# spopt>=0.5.0
+# hdbscan>=0.8.0
+
+# Web scraping (only if needed for production)
+# beautifulsoup4>=4.12.0
+# lxml>=4.9.0
+# tenacity>=8.2.0
