--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -8,6 +8,7 @@ scikit-learn>=1.3.0
 joblib>=1.3.0
 
 # PyTorch - CPU-only version for deployment
+--extra-index-url https://download.pytorch.org/whl/cpu
 torch>=2.0.0
 
 # Geospatial - Streamlit Cloud compatible versions
