--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -7,9 +7,8 @@ numpy>=1.26.0
 scikit-learn>=1.3.0
 joblib>=1.3.0
 
-# PyTorch - CPU-only version for deployment
---extra-index-url https://download.pytorch.org/whl/cpu
-torch>=2.0.0
+# PyTorch - standard PyPI version (works on Streamlit Cloud)
+torch==2.1.0
 
 # Geospatial - Streamlit Cloud compatible versions
 geopandas>=0.14.0
@@ -27,15 +26,3 @@ openpyxl>=3.1.0
 # Utilities
 scipy>=1.10.0
 requests>=2.31.0
-
-# Additional dependencies for model training (optional for deployment)
-# Uncomment if training locally:
-# numba>=0.57.0
-# libpysal>=4.9.0
-# spopt>=0.5.0
-# hdbscan>=0.8.0
-
-# Web scraping (only if needed for production)
-# beautifulsoup4>=4.12.0
-# lxml>=4.9.0
-# tenacity>=8.2.0
