--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,24 @@
 # Core Streamlit app
-streamlit>=1.35.0
-pandas>=2.0.0
-numpy>=1.26.0
+streamlit
+pandas
+numpy
 
 # Machine Learning
-scikit-learn>=1.3.0
-joblib>=1.3.0
+scikit-learn
+joblib
+torch
 
-# PyTorch - standard PyPI version (works on Streamlit Cloud)
-torch==2.1.0
-
-# Geospatial - Streamlit Cloud compatible versions
-geopandas>=0.14.0
-shapely>=2.0.0
-pyproj>=3.6.0
+# Geospatial
+geopandas
+shapely
+pyproj
 
 # Visualization
-folium>=0.15.0
-streamlit-folium>=0.16.0
-geopy>=2.3.0
+folium
+streamlit-folium
 
 # File handling
-openpyxl>=3.1.0
+openpyxl
 
 # Utilities
-scipy>=1.10.0
-requests>=2.31.0
+scipy
