--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
 streamlit
 pandas
 numpy
-scikit-learn
+scikit-learn==1.3.2
 joblib
-torch
+torch==2.1.0
 scipy
-geopandas
 shapely
 pyproj
+geopandas
 folium
 streamlit-folium
 openpyxl
